# CharCardView

./: .gitignore  README.md  install.bat  main.py  pyproject.toml  requirements.txt  start.bat
app/: __init__.py
app/core/: card_parser.py  exif_extractor.py  settings_manager.py
app/gui/: data_panel.py  flow_layout.py  loading_overlay.py  main_window.py  thumbnail_grid.py
app/models/: __init__.py  character_card.py
app/utils/: image_utils.py
exiftool/: EXIFTOOL_EXE_HERE
